<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trackfox</string>

    <string name="Text">Status:</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">Trusted Devices</string>
    <string name="Find">New Devices</string>

    <string name="action_toggle_bluetooth">Toggle Bluetooth</string>
    <string name="action_search_devices">Nearby Devices</string>
    <string name="action_trust_devices">Trusted Devices</string>
    <string name="statistics">Statistics</string>
    <string name="action_bluetooth_service">Bluetooth service ON/OFF</string>
</resources>
